# Sylliptor

./: .dockerignore  .gitignore  .trivyignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  sandbox-image.yml
docs/: README.md  architecture.md  credentials.md  custom_tools.md  forge.md  hooks.md  mcp.md  plugins.md  providers.md  quickstart.md  reference.md  sandbox.md  security_model.md  server.md  shell_sandbox.md  skills.md  skills_lifecycle.md  subagents.md  terminals.md
docs/examples/: README.md
sandbox/: Dockerfile  README.md
scripts/: README.md  refresh_chatgpt_codex_model_catalog.py  refresh_litellm_model_catalog.py  test_live_provider_smoke.sh  test_provider_native.sh  test_web_search.sh
scripts/qa/: __init__.py  check_deps.py  mock_llm.py  raw_agent_proxy.py
src/sylliptor_agent_cli/: __init__.py  account_login.py  agent_loop.py  agentbox_integration.py  approval_scope.py  atomic_io.py  background_runner.py  branding.py  bwrap_etc.py  capabilities.py  (+94 more)
tests/: _assets_test_helpers.py  _terminal_matrix_harness.py  conftest.py  test_acceptance_contract.py  test_acceptance_contract_integration.py  test_account_login.py  test_agent_loop_event_emission.py  test_agent_loop_final_step_nudge.py  test_agent_loop_finalization_advisories.py  test_agent_loop_forced_summary.py  test_agent_loop_hooks.py  test_agent_loop_host_managed_context.py  test_agent_loop_images.py  test_agent_loop_interactive_execution_posture.py  test_agent_loop_non_interactive.py  test_agent_loop_one_shot_follow_through.py  test_agent_loop_plugin_filter.py  test_agent_loop_retry_guard.py  test_agent_loop_review_approval.py  test_agent_loop_same_batch_read_dedup.py  test_agent_loop_small_talk.py  test_agent_loop_step_budget_runtime.py  test_agent_loop_tool_transcript_shaping.py  test_agent_routing_capabilities.py  test_agent_runtime_foundation.py  test_agentbox_integration.py  test_anthropic_messages.py  test_assets_budget_allocator.py  test_assets_comprehender.py  test_assets_index.py  test_assets_ingestion.py  test_assets_legacy_migration.py  test_assets_models.py  test_assets_ocr.py  test_assets_plan_binding.py  test_assets_planner_context.py  test_assets_planner_tools.py  test_assets_replanner_context.py  test_assets_surface.py  test_assets_worker_mirror.py  (+263 more)
(+295 files in other folders)
